# GMIND-ISP-Impact-Analysis

./: .gitignore  .gitmodules  README.md  pyproject.toml  requirements.txt  sensor_calibration.txt
Annotation/: README.md  __init__.py  annotation_generation.py  batch_annotate_videos.py  dep_annotation_generation.py  footpoint_to_ground.py  lidar_object_detection.py  visualise_annotations.py
DataLoader/: README.md  __init__.py  export_to_yolo.py  export_yolo_dataset_isp_variant.py  gmind_dataset.py
DeepLearning/: README.md  __init__.py  augmentations.py  gmind_config.yaml  run_inference.py  train_examples.sh  train_models.py
DeepLearning/adapters/: __init__.py  mmdet_adapter.py  torchvision_adapter.py  ultralytics_adapter.py
Evaluation/: README.md  __init__.py
Evaluation/analysis/: analyse_results.py  analysis_utils.py
Evaluation/core/: baseline_detector_and_tracker.py
Evaluation/utils/: filter_moving_objects.py
Evaluation/visualisation/: visualise_gt_and_pred.py
ImageSignalProcessing/: README.md  pipeline.py  run_isp.py  run_isp_sweep.py  run_isp_sweep_video.py
ImageSignalProcessing/configs/: FLIR8.9.yaml  FLIR8.9_Bayer_GC.yaml
ImageSignalProcessing/modules/: __init__.py  aaf.py  awb.py  basic_module.py  bcc.py  blc.py  bnf.py  ccm.py  ceh.py  cfa.py  cnf.py  csc.py  dpc.py  eeh.py  fcs.py  gac.py  gac_bayer.py  helpers.py  hsc.py  nlm.py  scl.py
ImageSignalProcessing/utils/: yacs.py
SensitivityAnalysis/: __init__.py  isp_dataset.py  plot_sensitivity_results.py  sensitivity_config.yaml  submit_jobs.py  train_job.sh
TimeSync/: README.md  temporal_alignment_validation.py
Validation/: README.md  infinity_projection_error.py  lidar_reprojection.py  radar_visualisation.py
misc/: logger.py
tests/: README.md  __init__.py  run_tests.py  smoke_train.py  test_3d_projection_grid_sparse.py  test_3d_projection_robust_pipeline.py  test_annotation_generation_integration.py  test_calibration_camera_model.py  test_coco_target.py  test_dataloader_visualization.py  test_evaluate_no_pycocotools.py  test_geometric_3d_projection.py  test_geometric_3d_projection_grid.py  test_imagesignalprocessing_pipeline.py  test_lidar_object_detection.py  test_load_model_weights.py  test_models.py  test_supported_models.py  test_timesync_functions.py  test_train_infer_all_models.py  test_train_models_smoke.py  test_training_loss_decreases.py  test_validation_functions.py  visualise_all_flir89.py  visualise_dataloader.py
